# menu_bot

./: main.py  pyproject.toml
heandlers/: heandlers.py
keyboards/: inline_kb.py
lexicon_ru/: lexicon_ru.py
