[tool.poetry]
name = "menu-tgbot"
version = "0.1.0"
description = ""
authors = ["bazzota <basdimbas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.6.0"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
